--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kario12"
+  name             : "A disbeliever"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : #"I am an **amazing** person."
   location         : "Somewhere"
